# Rosetta-Log

./: CMakeLists.txt  README.md  readme.zh-cn.md
example/: CMakeLists.txt  example  example.cpp  test.cpp
example/logs/: async_log.txt  basic-log.txt  daily_2021-07-28.txt  daily_2021-07-29.txt  multisink.txt  rotating.txt
include/spdlog/: logger_stream.h  logger_stream_overload.hpp  loggers.h
src/: logger_stream.cpp  loggers.cpp
